--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -1,30 +1,32 @@
-%table.list
-  %tr
-    %th= '&nbsp;'
-    %th= 'Person'[]
-    %th= 'Ranking'[]
-    %th= 'Played'[]
-    %th= 'Won'[]
-    %th= 'Lost'[]
-    %th= 'Win %'[]
-    %th{ :title => 'Goals for'[] }= 'GF'[]
-    %th{ :title => 'Goals against'[] }= 'GA'[]
-    %th{ :title => 'Goals for - goals against'[] }= '+/-'
-    %th= '+/- ' + 'Average'[]
+.list
+  %h3= title
+  %table
+    %tr
+      %th= '&nbsp;'
+      %th= 'Person'[]
+      %th= 'Ranking'[]
+      %th= 'Played'[]
+      %th= 'Won'[]
+      %th= 'Lost'[]
+      %th= 'Win %'[]
+      %th{ :title => 'Goals for'[] }= 'GF'[]
+      %th{ :title => 'Goals against'[] }= 'GA'[]
+      %th{ :title => 'Goals for - goals against'[] }= '+/-'
+      %th= '+/- ' + 'Average'[]
 
-  - people.each_with_index do |user, index|
-    %tr{ :class => cycle('odd', 'even') }
-      %td= index + start_at
-      %td
-        = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's games"[]), games_path(:filter => user.id)
-        = user_link_full(user)
-      %td= user.ranking
-      %td= user.memberships_count
-      %td= user.games_won
-      %td= user.games_lost
-      %td= user.winning_percentage.to_s + '%'
-      %td= user.goals_for
-      %td= user.goals_against
-      %td= user.difference
-      %td= user.difference_average
-  - reset_cycle
+    - people.each_with_index do |user, index|
+      %tr{ :class => cycle('odd', 'even') }
+        %td= index + start_at
+        %td
+          = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this user's games"[]), games_path(:filter => user.id)
+          = user_link_full(user)
+        %td= user.ranking
+        %td= user.memberships_count
+        %td= user.games_won
+        %td= user.games_lost
+        %td= user.winning_percentage.to_s + '%'
+        %td= user.goals_for
+        %td= user.goals_against
+        %td= user.difference
+        %td= user.difference_average
+    - reset_cycle
