--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -1,28 +1,21 @@
 - title 'Dashboard'[]
 
-- cache(dashboard_path) do
+- cache(root_path) do
   - if @rankings.size > 0
-    %h3= 'Rankings'[]
-    = render :partial => 'leaderboard', :locals => { :people => @rankings, :start_at => 1 }
+    = render :partial => 'leaderboard', :locals => { :people => @rankings, :start_at => 1, :title => 'Rankings'[] }
 
   - if @newbies.size > 0
-    %h3.noobs= 'Newbies'[]
-    = render :partial => 'leaderboard', :locals => { :people => @newbies, :start_at => @rankings.size + 1 }
+    = render :partial => 'leaderboard', :locals => { :people => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[] }
 
-.columns
-  .left-column
-    #recent_games
-      %h3= 'Recent games'[]
-      = render :partial => 'recent_games', :locals => { :recent_games => @recent_games }
+#recent_games.column.span-9
+  = render :partial => 'recent_games', :locals => { :recent_games => @recent_games }
       
-  - cache(dashboard_path + '_games_per_day') do
-    .right-column
-      #games_per_day
-        %h3= 'Games played per day'[]
-        = render :partial => 'games_per_day', :locals => { :games_per_day => @games_per_day }
+- cache(root_path + '_games_per_day') do
+  #games_per_day.column.span-9.last
+    = render :partial => 'games_per_day', :locals => { :games_per_day => @games_per_day }
 
 - content_for :sidebar do
-  - cache(dashboard_path + '_sidebar') do
+  - cache(root_path + '_sidebar') do
     - unless @leader.nil?
       #leader
         %h3= 'Leader'[]
