--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,22 +1,23 @@
 - title 'Users'[]
 
-%table.list
-  %tr
-    %th= '&nbsp';
-    %th= 'Name'[]
-    %th= 'Email'[]
-    %th= 'Administrator'[]
-    %th= 'Created at'[]
-    %th &nbsp;
+.list
+  %table
+    %tr
+      %th= '&nbsp';
+      %th= 'Name'[]
+      %th= 'Email'[]
+      %th= 'Administrator'[]
+      %th= 'Created at'[]
+      %th &nbsp;
 
-  - @users.each do |user|
-    %tr{ :class => cycle('odd', 'even') }
-      %td= image_tag user.mugshot.public_filename(:thumb), :alt => h(user.name) if user.mugshot
-      %td= link_to h(user.name), edit_user_path(user)
-      %td= mail_to user.email
-      %td= user.is_admin? ? 'Yes'[] : 'No'[]
-      %td= user.created_at.to_s :long
-      %td= link_to 'Remove'[], user_path(user), :method => :delete, :confirm => 'Are you sure?' if admin?
+    - @users.each do |user|
+      %tr{ :class => cycle('odd', 'even') }
+        %td= image_tag user.mugshot.public_filename(:thumb), :alt => h(user.name) if user.mugshot
+        %td= link_to h(user.name), edit_user_path(user)
+        %td= mail_to user.email
+        %td= user.is_admin? ? 'Yes'[] : 'No'[]
+        %td= user.created_at.to_s :long
+        %td= link_to 'Remove'[], user_path(user), :method => :delete, :confirm => 'Are you sure?' if admin?
 
 - if admin?
   - content_for :sidebar do
