Show add game form below the menu on all pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,15 @@
   
         #logo= link_to image_tag('logo.gif'), root_url
 
-        = render :partial => 'shared/menu'
+      #menu.clear
+        .column.span-16= render :partial => 'shared/menu'
+        #add_game.column.span-8.last
+          - if logged_in?
+            = link_to_function image_tag('icons/add.png') + ' ' + 'Add game'[], "$('#add_game_form').toggle()"
+          
+      - if logged_in?
+        #add_game_form.column.span-24{ :style => 'display: none' }
+          = render :partial => 'shared/add_game_form'
   
       - unless @page_title.blank?
         %h2#page_title= @page_title
