--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -398,6 +398,28 @@ h3
         :padding-right 0
         :padding-left 2px
         :text-align right
+  
+  #userlist
+    :margin-top 1.5em
+    
+    .user
+      :padding 10px
+      :border 1px solid #CCCCCC
+      :margin-bottom 10px
+      
+      .image
+        :width 60px
+        :height 60px
+        :margin-right 10px
+        :float left
+        :text-align center
+        :background-color #EEEEEE
+      
+      .role
+        :float right
+      
+      .name
+        :font-weight bold
 
 #sidebar
   .content
