--- a/app/views/layouts/public.html.haml
+++ b/app/views/layouts/public.html.haml
@@ -6,39 +6,37 @@
       - unless @page_title.blank?
         = ' - '
         = @page_title
-    %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/reset-fonts-grids/reset-fonts-grids.css', :type => 'text/css' }
-    %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/base/base-min.css', :type => 'text/css' }
-    = stylesheet_link_tag 'screen'
+    = stylesheet_link_tag 'screen', :media => 'screen, projection'
     = stylesheet_link_tag 'print', :media => 'print'
+    /[if IE]
+      = stylesheet_link_tag 'lib/ie', :media => 'screen, projection'
     = javascript_include_tag :defaults
     = yield :head
 
   %body
-    #doc3.yui-t7
-      #hd
+    .container
+      #hd.column.span-24
         #links
           #languages
             = 'Language'[] + ':'
             = link_to_unless(language == 'en', 'English', :language => 'en')
             = link_to_unless(language == 'da', 'Dansk', :language => 'da')
-    
-        %h1= link_to image_tag('logo.gif'), root_url
-    
+  
+        #logo= link_to image_tag('logo.gif'), root_url
+  
       - unless @page_title.blank?
         %h2#page_title= @page_title
-      #bd
-        #yui-main
-          %div
-            #content.yui-g
-              - if flash.keys.length > 0
-                #messages
-                  - flash.keys.each do |key|
-                    %div{ :class => 'key', :id => "flash_#{key}" }= flash[key]
-                = javascript_tag "$('#messages').pause(8000).Fade();"
+      .column.span-24
+        #bd.column.span-24
+          - if flash.keys.length > 0
+            #messages
+              - flash.keys.each do |key|
+                %div{ :class => 'key', :id => "flash_#{key}" }= flash[key]
+            = javascript_tag "$('#messages').pause(8000).Fade();"
 
-              = yield
-    
-      #ft
+          = yield
+  
+      #ft.column.span-24
         .content
           Copyright 2007 by Lars Sehested
           = '&middot;'
